# ghosthunt

./: .gitignore  CMakeLists.txt  README.md  listener.7z
data/: dungeon.xcf  ghost.xcf
src/: .main.cpp.swp  .renderer.h.swp  ghosthunt.cpp  ghosthunt.h  main.cpp  networker.cpp  networker.h  renderer.cpp  renderer.h  sfgui.cpp  sfgui.h  state_exit.cpp  state_exit.h  state_gameplay.cpp  state_gameplay.h  state_menu.cpp  state_menu.h  state_setup.cpp  state_setup.h  tile.cpp  tile.h
